@startuml Auth_ER
title ER — Auth Service (MySQL)

entity "auth_users" as AU {
  + id
  --
  email (unique)
  status
  created_at
  updated_at
}

entity "auth_credentials" as AC {
  + id
  --
  user_id (unique)
  password_hash
  algo
  password_updated_at
  updated_at
}

entity "auth_tokens" as AT {
  + id
  --
  user_id
  token_hash (unique)
  issued_at
  expires_at
  revoked
  last_used_at
  user_agent
  ip
  scopes
}

entity "roles" as R {
  + id
  --
  name (unique)
  comment
}

entity "user_roles" as UR {
  user_id
  role_id
}

AU ||--|| AC : "1 : 1"
AU ||--o{ AT : "1 : N"
AU ||--o{ UR : "1 : N"
R  ||--o{ UR : "1 : N"

@enduml
